force-app/main/default/objects/Title_Insurance_Fee_Base_Premium_and_GST__mdt/Title_Insurance_Fee_Base_Premium_and_GST__mdt.object-meta.xml
<CustomObject>
    <label>Title Insurance Fee Base Premium and GST</label>
    <pluralLabel>Title Insurance Fee Base Premium and GST</pluralLabel>
</CustomObject>