force-app/main/default/objects/Title_Insurance_Fee_Base_Premium_and_GST__mdt/fields/Additional_Fee_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Additional_Fee_per_Unit__c</fullName>
    <label>Additional Fee per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>