force-app/main/default/objects/Title_Insurance_Fee_Base_Premium_and_GST__mdt/fields/Base_Premiumum_Unit__c.field-meta.xml
<CustomField>
    <fullName>Base_Premiumum_Unit__c</fullName>
    <label>Base Premiumum Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>