force-app/main/default/objects/Title_Insurance_Fee_Base_Premium_and_GST__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Additional_Fee_per_Unit__c</columns>
    <columns>Base_Premium__c</columns>
    <columns>Base_Premiumum_Unit__c</columns>
    <columns>GST__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>